--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dev Burger - O melhro hambuger para programadores" />
+    <meta property="og:image" content="https://cardapion-online.vercel.app/assets/hamb-1.png" />
+    <meta property="og:description" content="Projeto para portifólio e desenvolvimento profissional" />
+    <meta property="og:site_name" content="Dev Burger" />
     <link rel="stylesheet" href="./styles/output.css">
 </head>
 
