--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <img src="./assets/hamb-1.png" alt="smash burger"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
                 <div class="">
-                    <p class="font-bold">Hambuerger Smash</p>
+                    <p class="font-bold">hamburger Smash</p>
                     <p class="text-sm">Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e
                         maionese da casa </p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 18.90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hambuerger Smash"
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Smash"
                             data-price="18.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
@@ -57,14 +57,14 @@
                 <img src="./assets/hamb-2.png" alt="Duplo burger"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
                 <div class="">
-                    <p class="font-bold">Hambuerger Duplo</p>
+                    <p class="font-bold">hamburger Duplo</p>
                     <p class="text-sm">
                         Pão levinho, com dois suculentos discos de 160g de carne, queijo prato derretido e maionese da
                         casa. </p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 32.90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hambuerger Duplo"
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Duplo"
                             data-price="32.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
@@ -74,13 +74,13 @@
                 <img src="./assets/hamb-3.png" alt="salad burger"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
                 <div class="">
-                    <p class="font-bold">Hambuerger Salad</p>
+                    <p class="font-bold">hamburger Salad</p>
                     <p class="text-sm">Pão levinho com um disco de 160g de carne suculenta, alface, tomate, cebola,
                         queijo e maionese da casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 35.90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hambuerger Salad"
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Salad"
                             data-price="35.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
@@ -90,14 +90,14 @@
                 <img src="./assets/hamb-4.png" alt="House burger"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
                 <div class="">
-                    <p class="font-bold">Hambuerger Da Casa</p>
+                    <p class="font-bold">hamburger Da Casa</p>
                     <p class="text-sm"> Pão levinho,
                         com um disco suculento de 160g de frango empanado, queijo especial
                         derretido.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3 ">
                         <p class="font-bold text-lg">R$ 30.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hambuerger Da Casa"
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Da Casa"
                             data-price="30">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
