--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev Burger - A melhor hamburgeria dev!</title>
+    <title>Boteco Três amigos - o melhor bar de SP</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,96 +13,119 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Dev Burger - O melhro hambuger para programadores" />
-    <meta property="og:image" content="https://cardapion-online.vercel.app/assets/hamb-1.png" />
+    <meta property="og:title" content="Boteco Três amigos - o melhor bar de SP" />
+    <meta property="og:image" content="https://cardapion-online.vercel.app/assets/caipirinha.png" />
     <meta property="og:description" content="Projeto para portifólio e desenvolvimento profissional" />
-    <meta property="og:site_name" content="Dev Burger" />
+    <meta property="og:site_name" content="Boteco Três amigos" />
     <link rel="stylesheet" href="./styles/output.css">
 </head>
 
 <body>
-    <header class="w-full h-[420px] bg-zinc-900 bg-home bg-cover bg-center">
+    <header class="w-full h-[420px] bg-gray-400 bg-home bg-cover bg-center bg-blend-darken">
         <div class="w-full h-full flex flex-col justify-center items-center">
-            <img src="./assets/hamb-1.png" alt="logo dev-burger"
-                class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200">
-            <h1 class="text-4xl mt-4 mb-2 font-bold text-white">Dev Burger</h1>
+            <img src="./assets/caipirinha.png" alt="logo dev-burger"
+                class="w-32 h-32 object-cover rounded-full shadow-lg hover:scale-110 duration-200">
+            <h1 class="text-4xl mt-4 mb-2 font-bold text-white">Boteco Três amigos</h1>
             <span class="text-white font-medium">Rua Node.JS, São Paulo - SP</span>
             <div class="bg-green-600 px-4 py-1 rounded-full mt-5" id="date-span">
-                <span class="text-white font-medium">Seg à Dom - 18:00 às 22:00</span>
+                <span class="text-white font-medium">Seg à Dom - 18:00 às 03:00</span>
             </div>
         </div>
     </header>
 
-    <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6">Conheça nosso menu</h2>
+    <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6">Conheça nosso cardápio</h2>
     <div class="" id="menu">
         <main class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
 
             <div class="flex gap-2 min-h-[200px] items-center">
-                <img src="./assets/hamb-1.png" alt="smash burger"
-                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
-                <div class="">
-                    <p class="font-bold">hamburger Smash</p>
-                    <p class="text-sm">Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e
-                        maionese da casa </p>
-
+                <img src="./assets/torresmo.jpg" alt="Torresmo de Barriga"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Torresmo de Barriga</p>
+                    <p class="text-sm">Delicioso torresmo de barriga crocante, perfeito para compartilhar.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg">R$ 18.90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Smash"
-                            data-price="18.90">
+                        <p class="font-bold text-lg">R$ 49.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Torresmo de Barriga"
+                            data-price="49.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
                 </div>
             </div>
-            <div class="flex gap-2 min-h-[200px] items-center">
-                <img src="./assets/hamb-2.png" alt="Duplo burger"
-                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
-                <div class="">
-                    <p class="font-bold">hamburger Duplo</p>
-                    <p class="text-sm">
-                        Pão levinho, com dois suculentos discos de 160g de carne, queijo prato derretido e maionese da
-                        casa. </p>
 
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/frango.jpg" alt="Frango à Passarinho"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Frango à Passarinho</p>
+                    <p class="text-sm">Frango à passarinho crocante e temperado, perfeito para petiscar.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg">R$ 32.90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Duplo"
-                            data-price="32.90">
+                        <p class="font-bold text-lg">R$ 54.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Frango à Passarinho"
+                            data-price="54.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
                 </div>
             </div>
-            <div class="flex gap-2 min-h-[200px] items-center">
-                <img src="./assets/hamb-3.png" alt="salad burger"
-                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
-                <div class="">
-                    <p class="font-bold">hamburger Salad</p>
-                    <p class="text-sm">Pão levinho com um disco de 160g de carne suculenta, alface, tomate, cebola,
-                        queijo e maionese da casa.</p>
 
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/pastel.jpg" alt="Pastéis"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Pastéis</p>
+                    <p class="text-sm">Pastéis crocantes, recheados com sabores variados, muito deliciosos.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg">R$ 35.90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Salad"
-                            data-price="35.90">
+                        <p class="font-bold text-lg">R$ 46.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pastéis" data-price="46.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
                 </div>
             </div>
-            <div class="flex gap-2 min-h-[200px] items-center">
-                <img src="./assets/hamb-4.png" alt="House burger"
-                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
-                <div class="">
-                    <p class="font-bold">hamburger Da Casa</p>
-                    <p class="text-sm"> Pão levinho,
-                        com um disco suculento de 160g de frango empanado, queijo especial
-                        derretido.</p>
 
-                    <div class="flex items-center gap-2 justify-between mt-3 ">
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/croquete.jpg" alt="Croquete Original"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Croquete Original</p>
+                    <p class="text-sm">Croquete original crocante por fora e macio por dentro.</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 49.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Croquete Original"
+                            data-price="49.00">
+                            <i class="fa fa-cart-plus text-lg text-white"></i></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/batata-frita.jpg" alt="Batata Frita"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Batata Frita</p>
+                    <p class="text-sm">Batata frita crocante e saborosa, ideal para acompanhar.</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 30.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="hamburger Da Casa"
-                            data-price="30">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Batata Frita"
+                            data-price="30.00">
                             <i class="fa fa-cart-plus text-lg text-white"></i></button>
                     </div>
                 </div>
             </div>
+
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/calabresa.jpeg" alt="Porção de Linguiça Calabresa"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Porção de Linguiça Calabresa</p>
+                    <p class="text-sm">Linguiça calabresa grelhada, servida com molho especial delicioso.</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 35.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                            data-name="Porção de Linguiça Calabresa" data-price="35.00">
+                            <i class="fa fa-cart-plus text-lg text-white"></i></button>
+                    </div>
+                </div>
+            </div>
+
         </main>
         <div class="mx-auto max-w-7xl px-2 my-2">
             <h2 class="font-bold text-3xl">Bebidas</h2>
@@ -136,6 +159,60 @@
                     </div>
                 </div>
             </div>
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/cerveja.jpeg" alt="Cerveja Budweiser"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Cerveja Budweiser</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 12.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Cerveja Budweiser"
+                            data-price="12">
+                            <i class="fa fa-cart-plus text-lg text-white"></i></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/caipirinha.png" alt="Caipirinha"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Caipirinha</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 25.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Caipirinha" data-price="25">
+                            <i class="fa fa-cart-plus text-lg text-white"></i></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/whisky.jpeg" alt="Dose de whisky"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Dose de whisky</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 30.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Dose de whisky"
+                            data-price="30">
+                            <i class="fa fa-cart-plus text-lg text-white"></i></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex gap-2 min-h-[200px] items-center">
+                <img src="./assets/cuba-libre.jpg" alt="Cuba libre"
+                    class="w-28 h-28 object-cover rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+                <div class="w-full">
+                    <p class="font-bold">Cuba libre</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 25.00</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Cuba libre" data-price="25">
+                            <i class="fa fa-cart-plus text-lg text-white"></i></button>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     <div class="bg-black/50 w-full h-full fixed  top-0 left-0 z-[99]  items-center justify-center hidden"
