--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="w-full h-full flex flex-col justify-center items-center">
             <img src="./assets/caipirinha.png" alt="logo dev-burger"
                 class="w-32 h-32 object-cover rounded-full shadow-lg hover:scale-110 duration-200">
-            <h1 class="text-4xl mt-4 mb-2 font-bold text-white">Boteco Três amigos</h1>
+            <h1 class="text-4xl mt-4 mb-2 font-bold sm:text-3xl text-white">Boteco Três amigos</h1>
             <span class="text-white font-medium">Rua Node.JS, São Paulo - SP</span>
             <div class="bg-green-600 px-4 py-1 rounded-full mt-5" id="date-span">
                 <span class="text-white font-medium">Seg à Dom - 18:00 às 03:00</span>
